--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -167,31 +167,39 @@ if(FL_BUILD_BINARY)
 endif(FL_BUILD_BINARY)
 
 ###INSTALL SECTION
-if(NOT CMAKE_INSTALL_LIBDIR)
-    set(CMAKE_INSTALL_LIBDIR lib)
+if(NOT FL_INSTALL_BINDIR)
+    set(FL_INSTALL_BINDIR bin)
+endif()
+
+if(NOT FL_INSTALL_LIBDIR)
+    if(NOT CMAKE_INSTALL_LIBDIR)
+        set(FL_INSTALL_LIBDIR lib)
+    else()
+        set(FL_INSTALL_LIBDIR ${CMAKE_INSTALL_LIBDIR})
+    endif()
 endif()
 
 if(FL_BUILD_BINARY)
     install(TARGETS fl-bin 
-            RUNTIME DESTINATION bin
-            LIBRARY DESTINATION  ${CMAKE_INSTALL_LIBDIR}
-            ARCHIVE DESTINATION  ${CMAKE_INSTALL_LIBDIR}
+            RUNTIME DESTINATION ${FL_INSTALL_BINDIR}
+            LIBRARY DESTINATION ${FL_INSTALL_LIBDIR}
+            ARCHIVE DESTINATION ${FL_INSTALL_LIBDIR}
     )
 endif()
 
 if(FL_BUILD_SHARED)
     install(TARGETS fl-shared 
-            RUNTIME DESTINATION bin
-            LIBRARY DESTINATION  ${CMAKE_INSTALL_LIBDIR}
-            ARCHIVE DESTINATION  ${CMAKE_INSTALL_LIBDIR}
+            RUNTIME DESTINATION ${FL_INSTALL_BINDIR}
+            LIBRARY DESTINATION ${FL_INSTALL_LIBDIR}
+            ARCHIVE DESTINATION ${FL_INSTALL_LIBDIR}
     )
 endif()
 
 if(FL_BUILD_STATIC)
     install(TARGETS fl-static
-            RUNTIME DESTINATION bin
-            LIBRARY DESTINATION  ${CMAKE_INSTALL_LIBDIR}
-            ARCHIVE DESTINATION  ${CMAKE_INSTALL_LIBDIR}
+            RUNTIME DESTINATION ${FL_INSTALL_BINDIR}
+            LIBRARY DESTINATION ${FL_INSTALL_LIBDIR}
+            ARCHIVE DESTINATION ${FL_INSTALL_LIBDIR}
     )
 endif()
 
@@ -202,6 +210,8 @@ message("fuzzylite v.${FL_VERSION}b${FL_DATE}\n")
 message("FL_USE_FLOAT=${FL_USE_FLOAT}")
 message("FL_BACKTRACE=${FL_BACKTRACE}")
 message("FL_CPP11=${FL_CPP11}")
+message("FL_INSTALL_BINDIR=${FL_INSTALL_BINDIR}")
+message("FL_INSTALL_LIBDIR=${FL_INSTALL_LIBDIR}")
 message("Build=${CMAKE_BUILD_TYPE}")
 message("=====================================\n")
 
