--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -125,9 +125,9 @@ if (MSVC OR CMAKE_GENERATOR STREQUAL Xcode)
         add_library(fl-shared SHARED ${fl-headers} ${fl-sources})
     endif()
 
-    if(FL_BUILD_SHARED)
+    if(FL_BUILD_STATIC)
         add_library(fl-static STATIC ${fl-headers} ${fl-sources})
-    endif(FL_BUILD_SHARED)
+    endif()
 else()
     if(FL_BUILD_SHARED OR FL_BUILD_STATIC)
         add_library(fl-obj OBJECT ${fl-headers} ${fl-sources})
