C language needed for CHECK_LIBRARY_EXISTS macro

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -80,6 +80,7 @@ set(FL_LIBS)
 #link with rt lib on Linux. Fixes problem with clock_gettime()
 include(CheckLibraryExists)
 if(UNIX AND NOT APPLE)
+    ENABLE_LANGUAGE(C)
     CHECK_LIBRARY_EXISTS(rt shm_open "" HAVE_RT_LIB)
     if(HAVE_RT_LIB)
         set(FL_LIBS ${FL_LIBS} rt)
