--- a/fuzzylite/fuzzylite.pc.in
+++ b/fuzzylite/fuzzylite.pc.in
@@ -1,7 +1,7 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
 includedir=${exec_prefix}/include
-libdir=${exec_prefix}/lib
+libdir=@CMAKE_INSTALL_LIBDIR@
 
 Name: fuzzylite
 Description: A fuzzy logic control library in C++
