--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -93,12 +93,11 @@ endif()
 
 ###BUILD SECTION
 include_directories(.)
-#link_directories(.)
-cmake_policy(SET CMP0015 OLD)
+cmake_policy(SET CMP0015 NEW)
+link_directories(.)
 if (APPLE)
     cmake_policy(SET CMP0042 NEW)
 endif()
-link_directories(.)
 
 file(STRINGS FL_HEADERS fl-headers)
 file(STRINGS FL_SOURCES fl-sources)
