Travis CI: if-then block

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ before_install:
         sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test;
         sudo add-apt-repository --yes ppa:h-rayflood/llvm;
         sudo add-apt-repository --yes ppa:andykimpe/cmake;
-        sudo apt-get update -qq; fi;
-        sudo apt-get install -qq $SUPPORT; fi
-        sudo apt-get install -qq $PACKAGE; fi
+        sudo apt-get update -qq;
+        sudo apt-get install -qq $SUPPORT;
+        sudo apt-get install -qq $PACKAGE;
     fi
 
   #setup compiler
