--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
         sudo add-apt-repository --yes ppa:h-rayflood/llvm;
         sudo add-apt-repository --yes ppa:andykimpe/cmake;
         sudo apt-get update -qq;
+        sudo apt-get install -qq cmake;
         sudo apt-get install -qq $SUPPORT;
         sudo apt-get install -qq $PACKAGE;
     fi
@@ -21,7 +22,9 @@ before_install:
 
 script:
   - cd fuzzylite
-  - cmake . -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=$FL_CONF -DFL_BACKTRACE=ON -DFL_USE_FLOAT=$FL_USE_FLOAT -DFL_CPP11=$FL_CPP11
+  - mkdir -p $FL_CONF
+  - cd $FL_CONF
+  - cmake .. -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=$FL_CONF -DFL_BACKTRACE=ON -DFL_USE_FLOAT=$FL_USE_FLOAT -DFL_CPP11=$FL_CPP11
   - make
 
 env:
