#36: Unit tests using Catch

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -33,6 +33,8 @@ option(FL_USE_FLOAT "Use fl::scalar as float" OFF)
 option(FL_BACKTRACE "Provide backtrace information in case of errors" OFF)
 option(FL_CPP11 "Builds utilizing C++11, i.e., passing -std=c++11" OFF)
 
+option(FL_BUILD_TESTS "Builds the unit tests" OFF)
+
 if(FL_CPP11 AND MSVC)
     message("Warning: MSVC not compatible with FL_CPP11 flag")
 endif()
@@ -88,9 +90,11 @@ include_directories(.)
 
 file(STRINGS FL_HEADERS fl-headers)
 file(STRINGS FL_SOURCES fl-sources)
+file(STRINGS FL_TESTS fl-tests)
 
 string(REGEX REPLACE "\n" " " ${fl-headers} ${fl-headers})
 string(REGEX REPLACE "\n" " " ${fl-sources} ${fl-sources})
+string(REGEX REPLACE "\n" " " ${fl-tests} ${fl-tests})
 
 message("${exepath}")
 
@@ -147,6 +151,24 @@ if(FL_BUILD_BINARY)
     target_link_libraries(fl-bin fl-shared ${FL_LIBS})
 endif(FL_BUILD_BINARY)
 
+if(FL_BUILD_TESTS)
+    add_executable(fl-test ${fl-tests})
+    set_target_properties(fl-test PROPERTIES OUTPUT_NAME fuzzylite-tests)
+    set_target_properties(fl-test PROPERTIES OUTPUT_NAME fuzzylite-tests IMPORT_PREFIX tmp-) #To prevent LNK1149 in Windows
+    set_target_properties(fl-test PROPERTIES DEBUG_POSTFIX -debug)
+
+    set_target_properties(fl-test PROPERTIES COMPILE_DEFINITIONS "FL_IMPORT_LIBRARY")
+    target_link_libraries(fl-test fl-shared ${FL_LIBS})
+
+    enable_testing()
+    add_test(NAME RunTests COMMAND fl-test)
+#    add_test(NAME ListTests COMMAND fl-test --list-tests)
+#    set_tests_properties(ListTests PROPERTIES PASS_REGULAR_EXPRESSION "[0-9]+ test case")
+
+#    add_test(NAME ListTags COMMAND fl-test --list-tags)
+#    set_tests_properties(ListTags PROPERTIES PASS_REGULAR_EXPRESSION "[0-9]+ tag")
+endif()  
+
 ###INSTALL SECTION
 if(NOT FL_INSTALL_BINDIR)
     set(FL_INSTALL_BINDIR bin)
@@ -197,6 +219,7 @@ message("FL_CPP11=${FL_CPP11}")
 message("FL_BACKTRACE=${FL_BACKTRACE}")
 message("FL_INSTALL_BINDIR=${FL_INSTALL_BINDIR}")
 message("FL_INSTALL_LIBDIR=${FL_INSTALL_LIBDIR}")
+message("FL_BUILD_TESTS=${FL_BUILD_TESTS}")
 message("Build=${CMAKE_BUILD_TYPE}")
 message("=====================================\n")
 
