Travis-CI: Notify always on successful builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -140,5 +140,5 @@ notifications:
   email:
     recipients:
       - jcrada@fuzzylite.com
-    on_success: change
+    on_success: always
     on_failure: always
