--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,17 @@ cache:
       - $HOME/cmake
 addons:
   apt:
-    sources:
-    - ubuntu-toolchain-r-test
+    sources: 
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise
+    packages: 
+      - ['g++-5', 'g++-4.9', 'g++-4.8']
+      - ['clang-3.5'] 
+#, ['clang-3.6', 'clang-3.5']
     
+before_install:
+  - export CC=$EXPORT_CC CXX=$EXPORT_CXX
+
 script:
   #cmake 
   - mkdir -p $HOME/cmake
@@ -34,170 +42,95 @@ script:
   - $CMAKE_CMD .. -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=Debug -DFL_BACKTRACE=ON -DFL_USE_FLOAT=$FL_USE_FLOAT -DFL_CPP11=$FL_CPP11
   - make
 
-env:
-  - ignore=this
-
 matrix:
   exclude:
     - env: ignore=this
-  
+
   include:
-#clang-3.2
-    - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.2']
-      compiler: clang
-      env: CC=clang-3.2 CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.2']
-      compiler: clang
-      env: CC=clang-3.2 CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
-    - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.2']
-      compiler: clang
-      env: CC=clang-3.2 CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
-    - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.2']
-      compiler: clang
-      env: CC=clang-3.2 CXX=clang++-3.2 PACKAGE=clang-3.2 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
+##clang-3.7
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CC=clang-3.7 EXPORT_CXX=clang++-3.7 PACKAGE=clang-3.7 FL_USE_FLOAT=OFF FL_CPP11=OFF
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CC=clang-3.7 EXPORT_CXX=clang++-3.7 PACKAGE=clang-3.7  FL_USE_FLOAT=ON FL_CPP11=OFF
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CC=clang-3.7 EXPORT_CXX=clang++-3.7 PACKAGE=clang-3.7  FL_USE_FLOAT=OFF FL_CPP11=ON
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CC=clang-3.7 EXPORT_CXX=clang++-3.7 PACKAGE=clang-3.7  FL_USE_FLOAT=ON FL_CPP11=ON
 
-#clang-3.3
-    - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.3']
-      compiler: clang
-      env: CC=clang-3.3 CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.3']
-      compiler: clang
-      env: CC=clang-3.3 CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
-    - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.3']
-      compiler: clang
-      env: CC=clang-3.3 CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
-    - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.3']
-      compiler: clang
-      env: CC=clang-3.3 CXX=clang++-3.3 PACKAGE=clang-3.3 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
+##clang-3.6
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CC=clang-3.6 EXPORT_CXX=clang++-3.6 PACKAGE=clang-3.6   FL_USE_FLOAT=OFF FL_CPP11=OFF
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CC=clang-3.6 EXPORT_CXX=clang++-3.6 PACKAGE=clang-3.6   FL_USE_FLOAT=ON FL_CPP11=OFF
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CC=clang-3.6 EXPORT_CXX=clang++-3.6 PACKAGE=clang-3.6   FL_USE_FLOAT=OFF FL_CPP11=ON
+    #- os: linux
+      #compiler: clang
+      #env: EXPORT_CC=clang-3.6 EXPORT_CXX=clang++-3.6 PACKAGE=clang-3.6   FL_USE_FLOAT=ON FL_CPP11=ON
 
-#clang-3.4
+#clang-3.5
     - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.4']
       compiler: clang
-      env: CC=clang-3.4 CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
+      env: EXPORT_CC=clang-3.5 EXPORT_CXX=clang++-3.5 PACKAGE=clang-3.5   FL_USE_FLOAT=OFF FL_CPP11=OFF
     - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.4']
       compiler: clang
-      env: CC=clang-3.4 CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
+      env: EXPORT_CC=clang-3.5 EXPORT_CXX=clang++-3.5 PACKAGE=clang-3.5   FL_USE_FLOAT=ON FL_CPP11=OFF
     - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.4']
       compiler: clang
-      env: CC=clang-3.4 CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
+      env: EXPORT_CC=clang-3.5 EXPORT_CXX=clang++-3.5 PACKAGE=clang-3.5   FL_USE_FLOAT=OFF FL_CPP11=ON
     - os: linux
-      addons:
-        apt:
-          packages: ['clang-3.4']
       compiler: clang
-      env: CC=clang-3.4 CXX=clang++-3.4 PACKAGE=clang-3.4 SUPPORT=g++-4.8 FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
+      env: EXPORT_CC=clang-3.5 EXPORT_CXX=clang++-3.5 PACKAGE=clang-3.5   FL_USE_FLOAT=ON FL_CPP11=ON
 
-#gcc-4.7
-    - os: linux
-      addons:
-        apt:
-          packages: ['g++-4.7']
-      compiler: gcc
-      env: CC=gcc-4.7   CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
-    - os: linux
-      addons:
-        apt:
-          packages: ['g++-4.7']
-      compiler: gcc
-      env: CC=gcc-4.7   CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
-    - os: linux
-      addons:
-        apt:
-          packages: ['g++-4.7']
-      compiler: gcc
-      env: CC=gcc-4.7   CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
-    - os: linux
-      addons:
-        apt:
-          packages: ['g++-4.7']
-      compiler: gcc
-      env: CC=gcc-4.7   CXX=g++-4.7     PACKAGE=g++-4.7   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
 
-#gcc-4.8
+#g++-5
     - os: linux
-      addons:
-        apt:
-          packages: ['g++-4.8']
-      compiler: gcc
-      env: CC=gcc-4.8   CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
+      compiler: g++
+      env: EXPORT_CC=g++-5   EXPORT_CXX=g++-5   PACKAGE=g++-5   FL_USE_FLOAT=OFF FL_CPP11=OFF
     - os: linux
-      addons:
-        apt:
-          packages: ['g++-4.8']
-      compiler: gcc
-      env: CC=gcc-4.8   CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
+      compiler: g++
+      env: EXPORT_CC=g++-5   EXPORT_CXX=g++-5   PACKAGE=g++-5   FL_USE_FLOAT=ON FL_CPP11=OFF
     - os: linux
-      addons:
-        apt:
-          packages: ['g++-4.8']
-      compiler: gcc
-      env: CC=gcc-4.8   CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
+      compiler: g++
+      env: EXPORT_CC=g++-5   EXPORT_CXX=g++-5   PACKAGE=g++-5   FL_USE_FLOAT=OFF FL_CPP11=ON
     - os: linux
-      addons:
-        apt:
-          packages: ['g++-4.8']
-      compiler: gcc
-      env: CC=gcc-4.8   CXX=g++-4.8     PACKAGE=g++-4.8   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
+      compiler: g++
+      env: EXPORT_CC=g++-5   EXPORT_CXX=g++-5   PACKAGE=g++-5   FL_USE_FLOAT=ON FL_CPP11=ON
 
-#gcc-5
+#g++-4.9
     - os: linux
-      addons:
-        apt:
-          packages: ['g++-5']
-      compiler: gcc
-      env: CC=gcc-5   CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=OFF
+      compiler: g++
+      env: EXPORT_CC=g++-4.9   EXPORT_CXX=g++-4.9   PACKAGE=g++-4.9   FL_USE_FLOAT=OFF FL_CPP11=OFF
     - os: linux
-      addons:
-        apt:
-          packages: ['g++-5']
-      compiler: gcc
-      env: CC=gcc-5   CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=OFF
+      compiler: g++
+      env: EXPORT_CC=g++-4.9   EXPORT_CXX=g++-4.9   PACKAGE=g++-4.9   FL_USE_FLOAT=ON FL_CPP11=OFF
     - os: linux
-      addons:
-        apt:
-          packages: ['g++-5']
-      compiler: gcc
-      env: CC=gcc-5   CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=OFF FL_CPP11=ON
+      compiler: g++
+      env: EXPORT_CC=g++-4.9   EXPORT_CXX=g++-4.9   PACKAGE=g++-4.9   FL_USE_FLOAT=OFF FL_CPP11=ON
     - os: linux
-      addons:
-        apt:
-          packages: ['g++-5']
-      compiler: gcc
-      env: CC=gcc-5   CXX=g++-5     PACKAGE=g++-5   SUPPORT=    FL_CONF=Debug FL_USE_FLOAT=ON FL_CPP11=ON
+      compiler: g++
+      env: EXPORT_CC=g++-4.9   EXPORT_CXX=g++-4.9   PACKAGE=g++-4.9   FL_USE_FLOAT=ON FL_CPP11=ON
 
+#g++-4.8
+    - os: linux
+      compiler: g++
+      env: EXPORT_CC=g++-4.8   EXPORT_CXX=g++-4.8   PACKAGE=g++-4.8   FL_USE_FLOAT=OFF FL_CPP11=OFF
+    - os: linux
+      compiler: g++
+      env: EXPORT_CC=g++-4.8   EXPORT_CXX=g++-4.8   PACKAGE=g++-4.8   FL_USE_FLOAT=ON FL_CPP11=OFF
+    - os: linux
+      compiler: g++
+      env: EXPORT_CC=g++-4.8   EXPORT_CXX=g++-4.8   PACKAGE=g++-4.8   FL_USE_FLOAT=OFF FL_CPP11=ON
+    - os: linux
+      compiler: g++
+      env: EXPORT_CC=g++-4.8   EXPORT_CXX=g++-4.8   PACKAGE=g++-4.8   FL_USE_FLOAT=ON FL_CPP11=ON
 
 notifications:
   email:
