--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
   apt:
     sources: 
       - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise
+      - llvm-toolchain-precise-3.5
     packages: 
       - ['g++-5', 'g++-4.9', 'g++-4.8']
       - ['clang-3.5'] 
