--- a/.travis.yml
+++ b/.travis.yml
@@ -52,31 +52,31 @@ matrix:
 #clang-3.6
     - os: linux
       compiler: clang
-      env: EXPORT_CXX=clang++-3.6 FL_CPP11=OFF FL_USE_FLOAT=OFF
+      env: EXPORT_CXX=clang-3.6 FL_CPP11=OFF FL_USE_FLOAT=OFF
     - os: linux
       compiler: clang
-      env: EXPORT_CXX=clang++-3.6 FL_CPP11=OFF FL_USE_FLOAT=ON
+      env: EXPORT_CXX=clang-3.6 FL_CPP11=OFF FL_USE_FLOAT=ON
     - os: linux
       compiler: clang
-      env: EXPORT_CXX=clang++-3.6 FL_CPP11=ON FL_USE_FLOAT=OFF
+      env: EXPORT_CXX=clang-3.6 FL_CPP11=ON FL_USE_FLOAT=OFF
     - os: linux
       compiler: clang
-      env: EXPORT_CXX=clang++-3.6 FL_CPP11=ON FL_USE_FLOAT=ON
+      env: EXPORT_CXX=clang-3.6 FL_CPP11=ON FL_USE_FLOAT=ON
 
 
 #clang-3.5
     - os: linux
       compiler: clang
-      env: EXPORT_CXX=clang++-3.5 FL_CPP11=OFF FL_USE_FLOAT=OFF
+      env: EXPORT_CXX=clang-3.5 FL_CPP11=OFF FL_USE_FLOAT=OFF
     - os: linux
       compiler: clang
-      env: EXPORT_CXX=clang++-3.5 FL_CPP11=OFF FL_USE_FLOAT=ON
+      env: EXPORT_CXX=clang-3.5 FL_CPP11=OFF FL_USE_FLOAT=ON
     - os: linux
       compiler: clang
-      env: EXPORT_CXX=clang++-3.5 FL_CPP11=ON FL_USE_FLOAT=OFF
+      env: EXPORT_CXX=clang-3.5 FL_CPP11=ON FL_USE_FLOAT=OFF
     - os: linux
       compiler: clang
-      env: EXPORT_CXX=clang++-3.5 FL_CPP11=ON FL_USE_FLOAT=ON
+      env: EXPORT_CXX=clang-3.5 FL_CPP11=ON FL_USE_FLOAT=ON
 
 #g++-5
     - os: linux
